# ocpp-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  doc.txt
.github/workflows/: rust.yml
afl-fuzz/: Cargo.toml  run-fuzz.sh
afl-fuzz/in/: a
afl-fuzz/src/: main.rs
example/: Cargo.toml
example/src/: main.rs
fuzz/: Cargo.toml  clean.sh  run_all.sh  run_common.sh  run_v16.sh  run_v21.sh
fuzz/corpus/v16_deserialize/: authorize.json  call_error_formation_violation.json  call_error_not_implemented.json  call_null_payload.json  cancel_reservation.json  certificate_signed.json  change_availability.json  delete_certificate.json  diagnostics_status_notification.json  get_log.json  heartbeat_result.json  remote_start_transaction.json  reset.json  send_local_list.json  set_charging_profile.json  signed_update_firmware.json  unknown_action.json  unlock_connector.json  wrong_arity.json
fuzz/corpus/v16_roundtrip/: boot.json  boot_notification.json  call_array_payload.json  call_error.json  call_error_occurence_constraint.json  call_error_unknown_code.json  call_result_heartbeat.json  change_configuration.json  extended_trigger_message.json  get_composite_schedule.json  get_configuration.json  get_diagnostics.json  get_installed_certificate_ids.json  heartbeat.json  install_certificate.json  log_status_notification.json  meter_values.json  remote_stop_transaction.json  reserve_now.json  security_event_notification.json  sign_certificate.json  signed_firmware_status_notification.json  start_transaction.json  status_notification.json  stop_transaction.json  type5_rejected.json  update_firmware.json
fuzz/corpus/v21_deserialize/: authorize.json  call_error_format_violation.json  call_error_generic.json  call_error_internal.json  call_error_property_constraint.json  call_result_error_format_violation.json  change_availability.json  change_transaction_tariff.json  clear_cache.json  cleared_charging_limit.json  close_periodic_event_stream.json  custom_data_extra.json  customer_information.json  firmware_status_notification.json  get15118_ev_certificate.json  get_base_report.json  get_certificate_chain_status.json  get_composite_schedule.json  get_local_list_version.json  get_monitoring_report.json  get_transaction_status.json  get_variables.json  heartbeat.json  log_status_notification.json  notify_allowed_energy_transfer.json  notify_charging_limit.json  notify_customer_information.json  notify_priority_charging.json  notify_settlement.json  publish_firmware_status_notification.json  report_charging_profiles.json  request_battery_swap.json  request_start_transaction.json  reserve_now.json  reset.json  security_event_notification.json  send_notify_periodic_event_stream.json  set_charging_profile.json  set_default_tariff.json  set_der_control.json  (+8 more)
fuzz/corpus/v21_roundtrip/: adjust_periodic_event_stream.json  afrr_signal.json  battery_swap.json  boot.json  boot_notification.json  call_error.json  call_error_message_type_not_supported.json  call_error_nested_details.json  call_error_not_supported.json  call_error_occurrence_constraint.json  call_error_protocol.json  call_error_rpc_framework.json  call_error_security.json  call_error_type_constraint.json  call_result_error.json  certificate_signed.json  clear_charging_profile.json  clear_der_control.json  clear_display_message.json  clear_tariffs.json  clear_variable_monitoring.json  cost_updated.json  data_transfer.json  delete_certificate.json  get_certificate_status.json  get_charging_profiles.json  get_der_control.json  get_display_messages.json  get_installed_certificate_ids.json  get_log.json  get_periodic_event_stream.json  get_report.json  get_tariffs.json  install_certificate.json  message_id_ok_36.json  message_id_too_long.json  meter_values.json  notify_der_alarm.json  notify_der_start_stop.json  notify_display_messages.json  (+21 more)
fuzz/fuzz_targets/: fuzz_target_1.rs  v16_corrupt.rs  v16_deserialize.rs  v16_roundtrip.rs  v16_structured.rs  v21_corrupt.rs  v21_deserialize.rs  v21_roundtrip.rs  v21_structured.rs  valid_call_result.rs  valid_calls.rs
fuzz/src/: lib.rs
guides/: README.md  datetime-features.md  migration-0.3.md  migration-0.4.md  ocpp-2.0.1.md  schema-validation.md
src/: datetime.rs  errors.rs  lib.rs  v16.rs  v21.rs  validate.rs
src/v16/: call.rs  call_error.rs  call_result.rs  data_types.rs  enums.rs  log_helper.rs  parse.rs  pending.rs  response_trait.rs  rpc_error_code.rs  typed_call_result.rs  types.rs  utils.rs  validate_gen.rs
src/v21/: actions.txt  call.rs  call_error.rs  call_result.rs  call_result_error.rs  errata.rs  log_helper.rs  parse.rs  pending.rs  response_trait.rs  rpc_error_code.rs  send.rs  typed_call_result.rs  utils.rs  validate_gen.rs  version.rs
src/v21/datatypes/: absolute_price_schedule_type.rs  additional_info_type.rs  additional_selected_services_type.rs  address_type.rs  certificate_hash_data_type.rs  charging_profile_type.rs  charging_schedule_period_type.rs  charging_schedule_type.rs  charging_schedule_update_type.rs  component_type.rs  component_variable_type.rs  constant_stream_data_type.rs  consumption_cost_type.rs  cost_type.rs  custom_data.rs  date_time.rs  der_curve_points_type.rs  der_curve_type.rs  enter_service_type.rs  evse_type.rs  fixed_pf_type.rs  fixed_var_type.rs  freq_droop_type.rs  gradient_type.rs  hysteresis_type.rs  id_token_info_type.rs  id_token_type.rs  limit_at_so_c_type.rs  limit_max_discharge_type.rs  message_content_type.rs  message_info_type.rs  meter_value_type.rs  mod.rs  ocsp_request_data_type.rs  overstay_rule_list_type.rs  overstay_rule_type.rs  periodic_event_stream_params_type.rs  price_rule_stack_type.rs  (+29 more)
tests/: datetime_features_tests.rs  device_model_catalog_tests.rs  f64_canonical_roundtrip.rs  fuzz_corpus_smoke.rs  integration_tests.rs  schema_validate_tests.rs  v16_exhaust_roundtrip.rs  v16_pending_tests.rs  v16_wire_types_tests.rs  v21_exhaust_roundtrip.rs  v21_integration_tests.rs  v21_tests.rs  v21_version_tests.rs
tools/: gen_device_model.py  gen_exhaust_tests.py  gen_fuzz_corpus.py  gen_v21_types.py  gen_validate.py
(+129 files in other folders)
