[package]
authors = ["Angelo L. B. Rodem"]
name = "ocpp_rs"
version = "0.2.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/angelorodem/ocpp-rs"
homepage = "https://github.com/angelorodem/ocpp-rs"
description = """
Protocol implementation for Open Charge Point Protocol (OCPP) in Rust.
"""
categories = ["data-structures", "algorithms"]
keywords = ["ocpp", "charger", "oca",  "eletric-vehicle", "ocpp16"]
exclude = ["doc_imgs/", ".*"]
resolver = "2"

[dependencies]
strum = { version = "^0.26", default-features = false, features = ["derive"] } # No_std
strum_macros = {version = "^0.26", default-features = false } # No_std
serde = { version = "^1", features = ["derive", "alloc"], default-features = false } # No_std
serde_tuple = { version = "^1", default-features = false} # No_std
serde_json = { version = "^1", default-features = false, features = ["alloc"] } # No_std
chrono = { version = "^0.4", default-features = false, features = ["serde", "alloc"] } # No_std