[package]
authors = ["Angelo L. B. Rodem"]
name = "ocpp_rs"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
repository = "https://github.com/angelorodem/ocpp-rs"
homepage = "https://github.com/angelorodem/ocpp-rs"
description = """
no_std + alloc OCPP 1.6 and 2.1 protocol library (OCPP-J parse/serialize, CallResult correlation).
"""
categories = ["data-structures", "algorithms", "no-std", "embedded"]
keywords = ["ocpp", "charger", "oca", "electric-vehicle"]
exclude = [
    "doc_imgs/",
    ".*",
    "docs/",
    "fuzz/",
    "tools/",
    "doc.txt",
    "example/",
    "src/v21/actions.txt",
]
resolver = "2"

[features]
default = []
datetime_serialize_rfc3339 = []
schema_validate = []
device_model_catalog = []

[dependencies]
strum = { version = "^0.28.0", default-features = false, features = ["derive"] } # No_std
strum_macros = {version = "^0.28.0", default-features = false } # No_std
serde = { version = "^1", features = ["derive", "alloc"], default-features = false } # No_std
serde_tuple = { version = "^1", default-features = false} # No_std
serde_json = { version = "^1", default-features = false, features = ["alloc"] } # No_std
chrono = { version = "^0.4", default-features = false, features = ["serde", "alloc"] } # No_std

[dev-dependencies]
# Keep feature-unified with the lib dep (no std/clock) so `cargo tree` stays no_std-clean.
chrono = { version = "^0.4", default-features = false, features = ["alloc", "serde"] }
