[package]
name = "ocpp_rs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.ocpp_rs]
path = ".."

[[bin]]
name = "valid_calls"
path = "fuzz_targets/valid_calls.rs"
test = false
doc = false
bench = false
